# OpenRacing

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  ROADMAP.md  _add_yaml_entries.py  _addtests.py  _check_yaml.py  _fix_yaml.py  _patch_lib.py  _verify_lib.py  build_errors.txt  build_errors2.txt  build_output.txt  check_errors.txt  check_errors_v3.txt  check_errors_v4.txt  check_errors_v5.txt  check_errors_v6.txt  check_errors_v7.txt  check_errors_v8.txt  check_errors_v9.txt  check_output.json  check_output_v12.txt  check_output_v13.txt  check_output_v14.txt  check_output_v16.txt  check_output_v18.txt  check_output_v19.txt  check_output_v2.txt  check_output_v20.txt  check_output_v21.txt  clippy.toml  clippy_output.txt  clippy_service.txt  (+24 more)
crates/changelog/: Cargo.toml
crates/changelog/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/completions/: README.md
crates/cli/src/: client.rs  completion.rs  error.rs  main.rs  output.rs
crates/cli/tests/: cli_arg_validation_tests.rs  cli_command_tests.rs  cli_comprehensive_e2e_tests.rs  cli_e2e_tests.rs  cli_hardening_tests.rs  cli_output_format_tests.rs  cli_output_snapshots.rs  cli_packaging_tests.rs  cli_ux_deep_tests.rs  command_integration_tests.rs  command_tests.rs  integration_tests.rs
crates/compat/: Cargo.toml  README.md
crates/compat/examples/: usage_example.rs
crates/compat/src/: lib.rs  telemetry_compat.rs
crates/compat/tests/: backward_compat.rs  compat_deep_tests.rs  compat_layer_tests.rs  compat_migration_deep_tests.rs  compat_regression_tests.rs  migration_edge_case_tests.rs  migration_paths.rs  migration_tests.rs  property_tests.rs
crates/engine/: Cargo.toml  bench_results.json
crates/engine/examples/: virtual_device_demo.rs
crates/engine/proptest-regressions/: benchmark_types.txt
crates/engine/src/: allocation_tracker.rs  benchmark_types.rs  compat_impl.rs  curves.rs  curves_property_tests.rs  device.rs  diagnostic.rs  engine.rs  ffb.rs  filter_pipeline_deep_tests.rs  filters.rs  hil_tests.rs  led_haptics.rs  lib.rs  metrics.rs  metrics_tests.rs  pipeline.rs  pipeline_determinism_tests.rs  policies.rs  ports.rs  prelude.rs  profile_merge.rs  profile_service.rs  protocol.rs  replay_diag_deep_tests.rs  rt.rs  rt_alloc_verify_tests.rs  safety.rs  scheduler.rs  test_harness.rs  tracing.rs  tracing_test.rs  two_phase_apply.rs
crates/engine/tests/: api_contract_tests.rs  calibration_deep_tests.rs  calibration_workflow_tests.rs  compile_tests.rs  cross_platform_deep_tests.rs  device_communication_tests.rs  device_config_deep_tests.rs  device_discovery_deep_tests.rs  device_dispatch.rs  device_hotplug_tests.rs  device_hotswap_tests.rs  device_matrix_comprehensive.rs  diagnostics_deep_tests.rs  engine_device_management_tests.rs  engine_error_handling_tests.rs  engine_rt_pipeline_tests.rs  engine_safety_deep_tests.rs  engine_snapshot_tests.rs  error_propagation_deep_tests.rs  ffb_effects_deep_tests.rs  ffb_jitter_isolation_tests.rs  ffb_pipeline_deep_tests.rs  ffb_pipeline_e2e_tests.rs  filter_chain_property_tests.rs  filter_node_tests.rs  filter_pipeline_comprehensive_tests.rs  game_integration_tests.rs  hid_integration_tests.rs  led_haptics_tests.rs  mutation_safety_tests.rs  perf_gate_tests.rs  pipeline_atomicity_tests.rs  pipeline_edge_case_tests.rs  pipeline_processing_tests.rs  platform_scheduling_tests.rs  property_tests.rs  replay_deep_tests.rs  replay_validation_deep_tests.rs  rt_allocation_tests.rs  rt_determinism_tests.rs  (+16 more)
crates/hid-accuforce-protocol/: Cargo.toml
crates/hid-accuforce-protocol/src/: effects.rs  ids.rs  lib.rs  report.rs  tests.rs  types.rs
crates/hid-accuforce-protocol/tests/: accuforce_deep_tests.rs  accuforce_protocol_tests.rs  comprehensive.rs  id_verification.rs  property_tests.rs  proptest_ids.rs  protocol_verification_tests.rs  roundtrip_proptest.rs  snapshot_encoding.rs  snapshot_tests.rs
crates/hid-asetek-protocol/: Cargo.toml
crates/hid-asetek-protocol/src/: effects.rs  ids.rs  input.rs  lib.rs  output.rs  quirks.rs  types.rs
crates/hid-asetek-protocol/tests/: asetek_deep_tests.rs  asetek_pedal_tests.rs  (+11 more)
crates/hid-cammus-protocol/: Cargo.toml
crates/hid-capture/: Cargo.toml
crates/hid-cube-controls-protocol/: Cargo.toml
crates/hid-fanatec-protocol/: Cargo.toml
crates/hid-ffbeast-protocol/: Cargo.toml
crates/hid-heusinkveld-protocol/: Cargo.toml
crates/hid-leo-bodnar-protocol/: Cargo.toml
crates/hid-moza-protocol/: Cargo.toml
crates/hid-openffboard-protocol/: Cargo.toml
crates/hid-pxn-protocol/: Cargo.toml
crates/hid-thrustmaster-protocol/: Cargo.toml
crates/integration-tests/: Cargo.toml  README.md
crates/ks/: Cargo.toml
crates/moza-wheelbase-report/: Cargo.toml
crates/openracing-atomic/: Cargo.toml
crates/openracing-binary-signature/: Cargo.toml
crates/openracing-calibration/: Cargo.toml
crates/openracing-capture-format/: Cargo.toml
crates/openracing-capture-ids/: Cargo.toml  README.md
crates/openracing-device-types/: Cargo.toml
crates/openracing-diagnostic/: Cargo.toml
crates/openracing-errors/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_ac_evo.rs  fuzz_ac_rally.rs  fuzz_acc2_udp.rs  fuzz_acc_udp.rs  fuzz_accuforce_input.rs  fuzz_ams2_udp.rs  fuzz_asetek_input.rs  fuzz_assetto_corsa.rs  fuzz_automobilista.rs  fuzz_beamng_udp.rs  fuzz_button_box_input.rs  fuzz_calibration_curve.rs  fuzz_cammus_direct.rs  fuzz_codemasters_udp.rs  fuzz_config_parse.rs  fuzz_cube_controls_input.rs  fuzz_dakar_udp.rs  fuzz_diagnostic_stream_codec.rs  fuzz_dirt3_udp.rs  fuzz_dirt4_udp.rs  fuzz_dirt5_udp.rs  fuzz_dirt_rally_2.rs  fuzz_dirt_showdown.rs  fuzz_eawrc_udp.rs  fuzz_ets2_udp.rs  fuzz_f1_25_car_status.rs  fuzz_f1_25_car_telemetry.rs  fuzz_f1_25_header.rs  fuzz_f1_25_normalize.rs  fuzz_f1_manager.rs  fuzz_f1_native.rs  fuzz_f1_udp.rs  fuzz_fanatec_command.rs  fuzz_fanatec_input.rs  fuzz_fanatec_output.rs  fuzz_ffbeast_input.rs  fuzz_filter_pipeline.rs  fuzz_firmware_bundle.rs  fuzz_flatout_udp.rs  fuzz_forza_horizon.rs  (+73 more)
(+3287 files in other folders)
