[workspace]
members = [
    "crates/schemas",
    "crates/engine",
    "crates/service",
    "crates/cli",
    "crates/ui",
    "crates/plugins",
    "crates/integration-tests",
    "crates/compat",
    "workspace-hack",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Racing Wheel Suite Contributors"]
repository = "https://github.com/EffortlessMetrics/OpenRacing"

[workspace.dependencies]
# Critical async/serialization crates - pinned for compatibility
tokio = { version = "1.39", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
async-trait = "0.1"

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Real-time and performance
parking_lot = "0.12"
crossbeam = "0.8"
mimalloc = "0.1"

# HID and hardware
hidapi = "2.4"
libudev = "0.3"

# Schema and validation
jsonschema = "0.33"

# Testing
criterion = "0.7"
proptest = "1.0"
hdrhistogram = "7.5"
mockall = "0.13"
wiremock = "0.6"
statistical = "1.0"
uuid = { version = "1.0", features = ["v4"] }
num_cpus = "1.0"

# Additional dependencies
base64 = "0.22"
clap = { version = "4.0", features = ["derive"] }
semver = "1.0"

# Build dependencies
prost-build = "0.13"
tonic-build = "0.12"

# Observability and metrics
prometheus = "0.14"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
sysinfo = "0.37"
tokio-stream = "0.1"

# System integration dependencies
os_info = "3.7"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

# Performance-critical profile for RT components
[profile.rt]
inherits = "release"
debug = false
overflow-checks = false

# Build configuration
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Cargo hakari configuration for feature unification
[workspace.metadata.hakari]
resolver = "2"
workspace-hack-crate = "workspace-hack"

# Feature flags for development and testing
[workspace.metadata.features]
default = []
validation = ["dev-features"]
dev-features = []
integration-tests = ["dev-features"]

# Crate features and ownership documentation
[workspace.metadata.crate-ownership]
service-ipc = { owner = "@owner-svc", features = [
    "tonic",
    "prost",
    "async-trait",
] }
cli-client = { owner = "@owner-cli", features = ["clap", "tokio"] }
plugins-wasm = { owner = "@owner-plug", features = ["wasmtime", "wasi"] }
plugins-native = { owner = "@owner-plug", features = [
    "libloading",
    "abi-stable",
] }
