[workspace]
members = [
    "crates/schemas",
    "crates/ks",
    "crates/srp",
    "crates/input-maps",
    "crates/hid-moza-protocol",
    "crates/engine",
    "crates/service",
    "crates/cli",
    "crates/ui",
    "crates/plugins",
    "crates/integration-tests",
      "crates/compat",
      "crates/openracing-capture-ids",
    "crates/telemetry-support",
    "crates/telemetry-config-writers",
    "crates/telemetry-core",
    "crates/telemetry-integration",
    "crates/telemetry-bdd-metrics",
    "crates/telemetry-contracts",
    "crates/telemetry-adapters",
    "crates/telemetry-rate-limiter",
    "crates/telemetry-orchestrator",
    "crates/telemetry-recorder",
      "workspace-hack",
  ]
exclude = ["third_party/shared_memory", "fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Racing Wheel Suite Contributors"]
repository = "https://github.com/EffortlessMetrics/OpenRacing"

[workspace.dependencies]
# Critical async/serialization crates - pinned for compatibility
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.3"
tonic-prost = "0.14.3"
prost = "0.14.3"
prost-types = "0.14.3"
async-trait = "0.1.89"

# Core dependencies
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
quick-xml = "0.37.5"
bincode = { package = "cu-bincode", version = "2.0.2", features = ["serde"] }
anyhow = "1.0.100"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# Real-time and performance
parking_lot = "0.12.5"
crossbeam = "0.8.4"
mimalloc = "0.1.48"

# HID and hardware
hidapi = "2.6.4"
libudev = "0.3.0"
crc32fast = "1.4.0"

# Schema and validation
jsonschema = "0.40.2"

# Testing
criterion = "0.8.1"
proptest = "1.9.0"
hdrhistogram = "7.5.4"
mockall = "0.14.0"
wiremock = "0.6.5"
statistical = "1.0.0"
uuid = { version = "1.20.0", features = ["v4"] }
num_cpus = "1.17.0"

# Additional dependencies
base64 = "0.22.1"
clap = { version = "4.5.56", features = ["derive"] }
semver = "1.0.27"

# Build dependencies
prost-build = "0.14.3"
tonic-build = "0.14.3"
tonic-prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"

# Observability and metrics
prometheus = "0.14.0"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
sysinfo = "0.38.0"
tokio-stream = "0.1.18"

# System integration dependencies
os_info = "3.14.0"
chrono = { version = "0.4.43", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

# Performance-critical profile for RT components
[profile.rt]
inherits = "release"
debug = false
overflow-checks = false

# Build configuration
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Cargo hakari configuration for feature unification
[workspace.metadata.hakari]
resolver = "2"
workspace-hack-crate = "workspace-hack"

# Feature flags for development and testing
[workspace.metadata.features]
default = []
validation = ["dev-features"]
dev-features = []
integration-tests = ["dev-features"]

# Crate features and ownership documentation
[workspace.metadata.crate-ownership]
service-ipc = { owner = "@owner-svc", features = [
    "tonic",
    "prost",
    "async-trait",
] }
cli-client = { owner = "@owner-cli", features = ["clap", "tokio"] }
plugins-wasm = { owner = "@owner-plug", features = ["wasmtime", "wasi"] }
plugins-native = { owner = "@owner-plug", features = [
    "libloading",
    "abi-stable",
] }

[patch.crates-io]
shared_memory = { path = "third_party/shared_memory" }
