[package]
name = "racing-wheel-changelog"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/racing-wheel-changelog"
publish = true
description = "Keep a Changelog parsing and formatting helpers for OpenRacing"

[lints.rust]
warnings = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"


[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
chrono = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
