[package]
name = "wheelctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "wheelctl"
path = "src/main.rs"

[dependencies]
racing-wheel-schemas = { path = "../schemas" }
tokio = { workspace = true }
tonic = { workspace = true }
clap = { version = "4.4", features = ["derive", "env", "color"] }
clap_complete = "4.4"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"