[package]
description = "wheelctl - part of OpenRacing"
name = "wheelctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "wheelctl"
path = "src/main.rs"

[dependencies]
racing-wheel-telemetry-config = { path = "../telemetry-config", version = "0.1.0" }
racing-wheel-schemas = { path = "../schemas", version = "0.1.0" }
tokio = { workspace = true }
tonic = { workspace = true }
clap = { version = "4.5.54", features = ["derive", "env", "color"] }
clap_complete = "4.5.65"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
colored = "3.1.1"
indicatif = "0.18.3"
dialoguer = "0.12.0"
dirs = "6.0.0"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = { version = "0.4.43", features = ["serde"] }
rand = "0.9.2"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tempfile = "3.24.0"
assert_cmd = "2.1.2"
predicates = "3.1.3"
