[package]
name = "racing-wheel-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
racing-wheel-schemas = { path = "../schemas" }
tokio = { workspace = true, features = ["time", "sync", "rt-multi-thread"] }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
mimalloc = { workspace = true, optional = true }
async-trait = "0.1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }

[dev-dependencies]
tracing-test = "0.2"
tokio-test = "0.4"
tracing-subscriber = "0.3"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_Security",
    "Win32_System_Power",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["mimalloc"]
rt-allocator = ["mimalloc"]