[package]
name = "racing-wheel-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
racing-wheel-schemas = { path = "../schemas" }
tokio = { workspace = true, features = ["time", "sync", "rt-multi-thread"] }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
mimalloc = { workspace = true, optional = true }
async-trait = "0.1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = "0.18"
bincode = "1.3"
crc32c = "0.6"
flate2 = "1.0"
zip = "0.6"
sysinfo = "0.30"
prometheus = { workspace = true }
metrics = { workspace = true }
hdrhistogram = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tracing-test = "0.2"
tokio-test = "0.4"
tracing-subscriber = "0.3"
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.8"
compat = { path = "../compat" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_Security",
    "Win32_System_Power",
    "Win32_System_Diagnostics_Etw",
] }
hidapi = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
libudev = { workspace = true }

[features]
default = ["mimalloc"]
rt-allocator = ["mimalloc"]
harness = []         # opt-in visibility for the test harness in non-test builds
