[package]
name = "racing-wheel-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
racing-wheel-schemas = { path = "../schemas" }
racing-wheel-ks = { path = "../ks" }
racing-wheel-input-maps = { path = "../input-maps" }
racing-wheel-hid-moza-protocol = { path = "../hid-moza-protocol" }
racing-wheel-hid-fanatec-protocol = { path = "../hid-fanatec-protocol" }
racing-wheel-hid-logitech-protocol = { path = "../hid-logitech-protocol" }
racing-wheel-hid-thrustmaster-protocol = { path = "../hid-thrustmaster-protocol" }
hid-simucube-protocol = { path = "../hid-simucube-protocol" }
hid-asetek-protocol = { path = "../hid-asetek-protocol" }
racing-wheel-hid-simagic-protocol = { path = "../hid-simagic-protocol" }
racing-wheel-hid-vrs-protocol = { path = "../hid-vrs-protocol" }
hid-heusinkveld-protocol = { path = "../hid-heusinkveld-protocol" }
racing-wheel-hid-openffboard-protocol = { path = "../hid-openffboard-protocol" }
racing-wheel-hid-ffbeast-protocol = { path = "../hid-ffbeast-protocol" }
openracing-atomic = { workspace = true }
openracing-tracing = { workspace = true }
openracing-curves = { workspace = true }
openracing-errors = { workspace = true }
openracing-filters = { workspace = true }
openracing-fmea = { workspace = true }
openracing-watchdog = { workspace = true }
openracing-hardware-watchdog = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt-multi-thread"] }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
mimalloc = { workspace = true, optional = true }
async-trait = "0.1.89"
rand = "0.9.2"
chrono = { version = "0.4.43", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
bincode = { workspace = true }
crc32c = "0.6.8"
crc32fast = { workspace = true }
flate2 = "1.1.8"
zip = "7.2.0"
sysinfo = { workspace = true }
prometheus = { workspace = true }
metrics = { workspace = true }
hdrhistogram = { workspace = true }
tokio-stream = { version = "0.1.18", features = ["sync"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tracing-test = "0.2.5"
tokio-test = "0.4.5"
tracing-subscriber = "0.3.22"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
tempfile = "3.24.0"
compat = { path = "../compat" }
proptest = { workspace = true }
num_cpus = { workspace = true }
criterion = { workspace = true }
openracing-test-helpers = { workspace = true }

# Enable harness feature for integration tests and examples
[dev-dependencies.racing-wheel-engine]
path = "."
features = ["harness"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_Security",
    "Win32_System_Power",
    "Win32_System_Diagnostics_Etw",
    # Device notification features
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    # Overlapped I/O features for HID writes
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
] }
hidapi = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.180"
libudev = { workspace = true }

[features]
default = ["mimalloc"]
rt-allocator = ["mimalloc"]
rt-hardening = []          # opt-in RT allocation tracking and hot-path enforcement
harness = []                # opt-in visibility for the test harness in non-test builds

[[example]]
name = "virtual_device_demo"
required-features = ["harness"]

[[test]]
name = "virtual_device_integration"
required-features = ["harness"]

[[bench]]
name = "rt_timing"
harness = false
path = "../../benches/rt_timing.rs"
